--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -760,6 +760,7 @@ header .container__header .box__header p {
 
 .services .container__services .box__services .boxcards__services .card__services {
   height: auto;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -767,7 +768,7 @@ header .container__header .box__header p {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  padding: 1rem;
+  padding: 1.5rem;
   margin: 1rem;
   background-color: #eee;
   -webkit-transform: scale(1);
@@ -778,6 +779,34 @@ header .container__header .box__header p {
   transition-property: background-color, color, -webkit-transform;
   transition-property: transform, background-color, color;
   transition-property: transform, background-color, color, -webkit-transform;
+  overflow: hidden;
+}
+
+.services .container__services .box__services .boxcards__services .card__services::before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#009AD8), to(rgba(0, 154, 216, 0.2)));
+  background: linear-gradient(#009AD8, rgba(0, 154, 216, 0.2));
+  top: -50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: 200%;
+  width: 180px;
+  opacity: 0;
+  -webkit-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+  -webkit-animation: borderAnimation 4s linear infinite;
+          animation: borderAnimation 4s linear infinite;
+}
+
+.services .container__services .box__services .boxcards__services .card__services::after {
+  content: '';
+  position: absolute;
+  background-color: #eee;
+  inset: 4px;
+  z-index: 2;
 }
 
 @media screen and (min-width: 520px) {
@@ -793,12 +822,18 @@ header .container__header .box__header p {
 
 .services .container__services .box__services .boxcards__services .card__services h3 {
   margin-bottom: 0.5rem;
+  z-index: 5;
+}
+
+.services .container__services .box__services .boxcards__services .card__services p {
+  z-index: 5;
 }
 
 .services .container__services .box__services .boxcards__services .card__services .img__service {
   width: 60px;
   height: 60px;
   margin-bottom: 2rem;
+  z-index: 5;
 }
 
 .services .container__services .box__services .boxcards__services .card__services .img__service .iconify {
@@ -806,11 +841,30 @@ header .container__header .box__header p {
   height: 60%;
 }
 
-.services .container__services .box__services .boxcards__services .card__services:hover {
-  background-color: #009AD8;
-  color: #d4d4d4;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+.services .container__services .box__services .boxcards__services .card__services:hover::before {
+  opacity: 1;
+}
+
+@-webkit-keyframes borderAnimation {
+  0% {
+    -webkit-transform: translateX(-50%) rotate(150deg);
+            transform: translateX(-50%) rotate(150deg);
+  }
+  100% {
+    -webkit-transform: translateX(-50%) rotate(510deg);
+            transform: translateX(-50%) rotate(510deg);
+  }
+}
+
+@keyframes borderAnimation {
+  0% {
+    -webkit-transform: translateX(-50%) rotate(150deg);
+            transform: translateX(-50%) rotate(150deg);
+  }
+  100% {
+    -webkit-transform: translateX(-50%) rotate(510deg);
+            transform: translateX(-50%) rotate(510deg);
+  }
 }
 
 .process {
