--- a/sass/style_mobile.sass
+++ b/sass/style_mobile.sass
@@ -442,16 +442,42 @@ header
                 .card__services
                     // width: 300px
                     height: auto
+                    position: relative
                     display: flex
                     flex-flow: column nowrap
                     // border: 1px solid $priColor
-                    padding: 1rem
+                    padding: 1.5rem
                     margin: 1rem
                     background-color: #eee
                     transform: scale(1)
                     transition: all 300ms ease-in-out
                     transition-property: transform, background-color, color
+                    overflow: hidden
+
+                    &::before
+                        content: ''
+                        position: absolute
+                        z-index: 1
+                        background: linear-gradient($priColor,rgba($priColor,0.2))
+                        top: -50%
+                        left: 50%
+                        transform: translateX(-50%)
+                        height: 200%
+                        width: 180px
+                        opacity: 0
+                        transition: 200ms ease-in-out
+                        animation: borderAnimation 4s linear infinite
                     
+                    &::after
+                        content: '' 
+                        position: absolute
+                        background-color: #eee
+                        // opacity: 0
+                        inset: 4px
+                        z-index: 2
+                        // transition: 100ms ease-in-out
+
+
                     @media screen and ( min-width: $midScreen )
 
                         &:nth-child(1)
@@ -462,20 +488,35 @@ header
 
                     h3
                         margin-bottom: 0.5rem
+                        z-index: 5
+                    
+                    p
+                        z-index: 5
+
 
                     .img__service
                         width: 60px
                         height: 60px
                         margin-bottom: 2rem
-    
+                        z-index: 5
+
                         .iconify
                             width: 60%
                             height: 60%
 
                     &:hover
-                        background-color: $priColor
-                        color: $fontSecColor
-                        transform: scale(1.1)
+                        // transform: scale(1.05)
+
+                        &::before
+                            opacity: 1
+
+@keyframes borderAnimation
+    0%
+        transform: translateX(-50%) rotate(150deg)
+    100%
+        transform: translateX(-50%) rotate(510deg)                            
+
+
 
 .process
     overflow: hidden
