--- a/sass/style_mobile.sass
+++ b/sass/style_mobile.sass
@@ -255,7 +255,7 @@ nav
                 font-weight: 500
             
 
-            &:last-child > a
+            &:nth-last-of-type(1) > a
                 color: $priColor
 
             &:hover > a
@@ -282,7 +282,24 @@ nav
                     // background-color: $priColor
                     &::before
                         transform: scale(1,1)
+
+
+
+    .socialIconsNav
+        margin-top: 2rem
+        padding: 1rem 0
+        background-color: rgba($priColor,0.1)
+
+        .menuItem
+            margin: 0 1rem
+            transition: .3s ease-in-out
+            &:hover
+                color: $fontSecColor
+            .iconify
+                font-size: 2rem
+
     
+
 header
     width: 100%
     padding: 4rem 0.5rem 1rem 0.5rem
@@ -1219,6 +1236,43 @@ section
     padding: 1rem
     max-width: 70ch
     margin: 40vh auto
+
+
+
+.error404
+    height: 100vh
+    width: 100%
+    display: flex
+    flex-direction: column
+    
+    // justify-content: center
+    align-items: center
+    background-color: #f8de6a !important
+    padding: 0.5rem
+
+    h1
+        font-size: 6rem
+        margin-top: 3rem
+    h3
+        font-size: 1.5rem
+        text-align: center
+    
+    a
+        font-size: 2rem
+        font-weight: bold
+        margin-top: 2rem
+
+
+    // @media screen and ( min-width: $midScreen )
+
+
+
+
+
+
+
+
+
 
 
 // .image3
